--- a/src/index.css
+++ b/src/index.css
@@ -90,12 +90,12 @@ a:hover {
   -o-transition: var(--transition);
 }
 .btn:hover {
-  background-color: var(--color-white);
+  background: var(--color-white);
   color: var(--color-bg);
   border-color: transparent;
 }
 .btn-primary {
-  background-color: var(--color-primary);
+  background: var(--color-primary);
   color: var(--color-bg);
 }
 img {
