--- a/src/components/About.css
+++ b/src/components/About.css
@@ -102,6 +102,9 @@
   }
 }
 @media screen and (max-width: 600px) {
+  .about__container {
+    width: 80%;
+  }
   .about__me {
     width: 65%;
     margin: 0 auto 3rem;
