--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Explora&family=Great+Vibes&family=Poppins:wght@300;400;500;600&display=swap");
 header {
   height: 100vh;
   padding-top: 7rem;
@@ -7,6 +8,9 @@ header {
   text-align: center;
   height: 100%;
   position: relative;
+}
+.header__container h1 {
+  font-family: "Great Vibes", cursive;
 }
 .cta {
   margin-top: 2.5rem;
