--- a/src/index.css
+++ b/src/index.css
@@ -31,10 +31,10 @@
   --container-width-sm: 90%;
   --transition: all 500ms ease;
 
-  /* --color-bg: #2c112a;
-  --color-bg-variant: #995d7c;
-  --color-primary: #bd92b7;
-  --color-primary-variant: #995d7c;
+  /* --color-bg: #10162f;
+  --color-bg-variant: #0d2151;
+  --color-primary: #90396f;
+  --color-primary-variant: #cc5a88;
   --color-white: #fff;
   --color-light: #eeeeee;
   --container-width-lg: 75%;
