--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -32,7 +32,7 @@ header {
   content: "";
   width: 1px;
   height: 2rem;
-  background: var(--color-primary);
+  /* background: var(--color-primary); */
 }
 
 .myImage {
